--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "from datetime import datetime\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -40,7 +42,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func, inspect"
    ]
   },
   {
@@ -50,7 +52,7 @@
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "engine = create_engine('sqlite:///hawaii.sqlite', echo=False)"
    ]
   },
   {
@@ -60,8 +62,10 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
     "\n",
-    "# reflect the tables\n"
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
@@ -70,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "Base.classes.keys()"
    ]
   },
   {
@@ -79,7 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "Measurements = Base.classes.measurement\n",
+    "Stations = Base.classes.station"
    ]
   },
   {
@@ -88,7 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
@@ -104,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the most recent date in the data set."
+    "# Find the most recent date in the data set.\n",
+    "session.query(Measurements.date).order_by(Measurements.date.desc()).first()"
    ]
   },
   {
@@ -115,22 +124,40 @@
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
+    "last_date = session.query(Measurements.date).order_by(Measurements.date.desc()).first()\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
+    "last_date = dt.datetime.strptime(last_date[0], '%Y-%m-%d')\n",
+    "year_ago = last_date - dt.timedelta(days=366)\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
+    "last_year = session.query(Measurements.date, Measurements.prcp).\\\n",
+    "    filter(Measurements.date > year_ago).all()\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
+    "df = pd.DataFrame(last_year, columns=['Date', 'precipitation'])\n",
+    "df.set_index('Date', inplace=True)\n",
     "\n",
     "# Sort the dataframe by date\n",
-    "\n",
+    "df = df.sort_index()\n",
     "\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "tick_vals = []\n",
+    "tick_labels = []\n",
     "\n",
-    "\n"
+    "for x in range(0, len(df), 250):\n",
+    "    if x < len(df):\n",
+    "        tick_vals.append(x)\n",
+    "        tick_labels.append(df.index.values[x])\n",
+    "\n",
+    "df.plot(figsize=(7.75,6));\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.xticks(tick_vals, tick_labels, rotation=\"vertical\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Inches\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/last_12_mos_precip.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -139,7 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data\n"
+    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "df.describe()"
    ]
   },
   {
@@ -155,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to calculate the total number stations in the dataset\n"
+    "# Design a query to calculate the total number stations in the dataset\n",
+    "session.query(Stations.station).count()"
    ]
   },
   {
@@ -165,7 +194,12 @@
    "outputs": [],
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "row_cts_by_station = session.query(Measurements.station, Stations.name, func.count(Measurements.station)).\\\n",
+    "    filter(Measurements.station == Stations.station).\\\n",
+    "    group_by(Measurements.station).\\\n",
+    "    order_by(func.count(Measurements.station).desc()).all()\n",
+    "row_cts_by_station"
    ]
   },
   {
@@ -174,7 +208,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "USC00519281_low = session.query(func.min(Measurements.tobs)).\\\n",
+    "    filter(Measurements.station == 'USC00519281')\n",
+    "USC00519281_high = session.query(func.max(Measurements.tobs)).\\\n",
+    "    filter(Measurements.station == 'USC00519281').all()\n",
+    "USC00519281_avg = session.query(func.avg(Measurements.tobs)).\\\n",
+    "    filter(Measurements.station == 'USC00519281').all()\n",
+    "\n",
+    "# Round the average figure for clean display\n",
+    "USC00519281_avg_map = round(USC00519281_avg[0][0],1)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"The lowest recorded temperature for most activate station USC00519281: {USC00519281_low[0][0]}.\")\n",
+    "print(f\"The highest recorded temperature for most activate station USC00519281: {USC00519281_high[0][0]}.\")\n",
+    "print(f\"The average recorded temperature for most activate station USC00519281: {USC00519281_avg_map}.\")"
    ]
   },
   {
@@ -184,7 +232,23 @@
    "outputs": [],
    "source": [
     "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "last_year_active = session.query(Measurements.tobs).\\\n",
+    "    filter(Measurements.date > year_ago).\\\n",
+    "    filter(Measurements.station == 'USC00519281').all()\n",
+    "\n",
+    "# Save the query results as a Pandas DataFrame\n",
+    "active_df = pd.DataFrame(last_year_active, columns=['Temp'])\n",
+    "\n",
+    "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.hist(active_df['Temp'], bins=12) \n",
+    "plt.legend(labels=['tobs'],loc='upper right')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.xlabel('Temperature');\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/last_12_mos_temp_USC00519281.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -203,13 +267,6 @@
     "# Close Session\n",
     "session.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -218,9 +275,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:PythonData38] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-PythonData38-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.12"
   },
   "nteract": {
    "version": "0.12.3"
