Completed bonus Analysis 2 code

--- a/temp_analysis_bonus_2_starter.ipynb
+++ b/temp_analysis_bonus_2_starter.ipynb
@@ -137,8 +137,8 @@
    "source": [
     "# Use the function `calc_temps` to calculate the tmin, tavg, and tmax \n",
     "# for a year in the data set\n",
-    "start_date = '2017-04-01'\n",
-    "end_date = '2017-04-09'\n",
+    "start_date = '2017-01-01'\n",
+    "end_date = '2017-01-07'\n",
     "spring_break_2017 = calc_temps(start_date, end_date)\n",
     "spring_break_2017"
    ]
@@ -246,8 +246,8 @@
     "# push each tuple of calculations into a list called `normals`\n",
     "\n",
     "# Set the start and end date of the trip\n",
-    "start_date = '2023-01-01'\n",
-    "end_date = '2023-01-07'\n",
+    "start_date = '2018-01-01'\n",
+    "end_date = '2018-01-07'\n",
     "\n",
     "# Use the start and end date to create a range of dates\n",
     "trip_dates = pd.date_range(start_date, end_date)\n",
@@ -264,7 +264,7 @@
     "\n",
     "for x in date_strings:\n",
     "    normals.append(daily_normals(x))\n",
-    "\n",
+    "    \n",
     "normals"
    ]
   },
@@ -308,19 +308,18 @@
    "outputs": [],
    "source": [
     "# Plot the daily normals as an area plot with `stacked=False`\n",
+    "index = np.arange(len(normals_df))\n",
     "\n",
-    "# plt.fill_between(np.arange(12), turnover,\n",
-    "#                  color=\"skyblue\", alpha=0.4)\n",
-    "# plt.plot(np.arange(12), turnover, color=\"Slateblue\",\n",
-    "#          alpha=0.6, linewidth=2)\n",
+    "ax = normals_df.plot.area(stacked=False);\n",
+    "ax.set_xlabel('Date');\n",
+    "ax.set_ylabel('Temperature');\n",
+    "ax.set_xticks(index)\n",
+    "ax.set_xticklabels(list(normals_df.index), rotation=30, ha=\"right\");\n",
+    "ax.legend()\n",
     "\n",
-    "# plt.tick_params(labelsize=12)\n",
-    "# plt.xticks(np.arange(12), np.arange(1,13))\n",
-    "# plt.xlabel('Month', size=12)\n",
-    "# plt.ylabel('Turnover (K euros) of ice-cream', size=12)\n",
-    "# plt.ylim(bottom=0)\n",
-    "\n",
-    "# plt.show()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/daily_normals.png\")\n",
+    "plt.show()"
    ]
   },
   {
